refactor: ImageRepository decodeURL 코드 수정